fix styling for chrome
- remove scrollbars
- fix sarah's image
- add meta tags for service and responsive
- remove missing volunteers
- fix arrow symbols

--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ main {
 	height: 100vh;
 	flex: 1;
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: hidden;
 }
 
 /* Header */
@@ -708,7 +708,7 @@ align-items: flex-start;
 
 #services-intro {
 	width: 100%;
-	height: 100vh;
+	height: auto;
 	padding: 0;
 	margin: 0;
 	display: flex;
